--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@
     display: flex;
     justify-content: center;
 }
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+}
