--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@
     background-color: var(--fundo-texto);
     color: var(--branco);
 }
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+    border: 2px solid var(--borda);
+}
